[project]
name = "pbsq"
version = "0.1.0"
description = "Python-based PBS job submission"
authors = [
    {name = "Kâmuran İmran",email = "c.mcmenamie@unsw.edu.au"}
]
license = {text = "Apache-2"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "sshconf (>=0.2.7,<0.3.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
docker = "^7.1.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
